feat: AuthN/AuthZ and JSON capability

--- a/templates/volunteers.html
+++ b/templates/volunteers.html
@@ -11,6 +11,7 @@
 			<h3>Start Time: {{event.timeStart}}</h3>
 			<h3>End Time: {{event.timeEnd}}</h3>
 			<h3>Number of Volunteers needed: {{event.numVolunteers}}</h3>
+			<h3>Event Owner: {{owner.name}}</h3>
 			<h3>Event Description: {{event.description}}
 		</div>
 	</div>
