--- a/static/styles.css
+++ b/static/styles.css
@@ -130,9 +130,6 @@ h3 {
 	margin: 20px;
 	margin-left: -20px;
 }
-.menu-price {
-	font-weight: 700;
-}
 .creator {
 	padding-right: 20px;
 	margin-top: -20px;
@@ -160,4 +157,13 @@ h3 {
 	list-style-type: none;
 	text-align: center;
 
+}
+
+.loginpage {
+    text-align: center;
+}
+
+#signInButton{
+    text-align: center;
+    margin: 10px;
 }
